#-------------------------------------------------------------------------------
#  - Project
#-------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.15)
project(stl-practice)

#-------------------------------------------------------------------------------
#  - Configuration
#-------------------------------------------------------------------------------
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # for clangd

#-------------------------------------------------------------------------------
#  - lib
#-------------------------------------------------------------------------------
include_directories(include)
add_executable(main main.cpp)

#-------------------------------------------------------------------------------
#  - Subdirectories
#-------------------------------------------------------------------------------
add_subdirectory(test)
